# vidyut-py

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: Python.yml
src/: cheda.rs  kosha.rs  lib.rs
src/prakriya/: args.rs  mod.rs
test/: test_cheda.py  test_kosha.py  test_prakriya.py
test/data/: test-dhatupatha.tsv
